<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:orientation="vertical">
        <TextView
            android:id="@+id/result_label_Ecran"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/app_margin"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/result_label_ecran" />
        <TextView
            android:id="@+id/result_valeur_imc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/app_margin"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/result_valeur_imc" />
        <TextView
            android:id="@+id/result_categories_imc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/app_margin"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/result_text_imc" />
</LinearLayout>